# take-home-project

./: .gitignore  README.md  postman_collection.json  pyproject.toml  seed.py
app/: db.py  main.py  models.py  schema.sql
app/routers/: documents.py
app/services/: bulk_service.py  document_service.py  search_service.py
docs/: _pdf-style.css  client-overview.html
frontend/: README.md  index.html
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: BulkChanges.jsx  ChangeForm.jsx  DiffView.jsx  DocumentDetail.jsx  DocumentList.jsx  Search.jsx
frontend/src/lib/: changes.js  diff.js
tests/: conftest.py  test_bulk_changes_api.py  test_documents_api.py  test_error_handling.py  test_models.py  test_performance.py  test_range_operations.py  test_search_api.py  test_search_service.py
